canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app
spec:
  selector:
    app: java-app
  ports:
    - port: 8086
      targetPort: 8080
